# timeular-reader

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  handler.rs  main.rs  tracker.rs
src/handler/: clockify.rs  example.rs  hackaru.rs  toggl.rs  traggo.rs
src/handler/clockify/: config.rs
src/handler/example/: config.rs
src/handler/hackaru/: config.rs  http_data.rs
src/handler/toggl/: config.rs
src/tracker/: config.rs  reader.rs
