[package]
name = "timeular_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = { version = "0.9.2", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.21"
serde = "1.0.137"
log = "0.4"
