[package]
name = "timeular_reader"
version = "0.1.0"
edition = "2021"

[dependencies]
btleplug = { version = "0.9.2", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.21"
serde = "1.0.137"
log = "0.4"
simplelog = { version = "^0.11.0", features = ["paris"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
async-trait = "0.1.56"
rpassword = "6.0"
serde_derive = "1.0.137"
cookie_store = "0.16.1"
reqwest_cookie_store = "0.3.0"
toml = "0.5.9"
serde_json = "1.0"
clap = { version = "3.2.6", features = ["derive"] }
